tests/NormalTests/paczka1/fuzzy1/76250813.err
Error in line 5: 7cZO0Iq55 A729 58,2
Error in line 1: vDOsH0Tjly S956 87,6
Error in line 10: 7cZO0Iq55 S956 0,3
Error in line 4: 8LcD7 S956 186,4
Error in line 22: 3gDqAQ A729 76,1
